// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders username and body 1`] = `
<div
  className="root"
>
  <Username>
    Marvin
  </Username>
  <withPropsOnChange(Typography)>
    Woof
  </withPropsOnChange(Typography)>
</div>
`;

exports[`renders with gutterBottom 1`] = `
<div
  className="root gutterBottom"
>
  <Username>
    Marvin
  </Username>
  <withPropsOnChange(Typography)>
    Woof
  </withPropsOnChange(Typography)>
</div>
`;
